plugins {
	id 'java'
}

group 'io.github.axolotlclient.AxolotlClient-config'
archivesBaseName = "AxolotlClientConfig-common"

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {

	implementation "com.google.code.gson:gson:2.2.4"
	compileOnly "com.google.code.gson:gson:2.2.4"
	implementation 'org.jetbrains:annotations:23.0.0'

	compileOnly("commons-io:commons-io:2.4")
	compileOnly("org.apache.commons:commons-lang3:3.3.2")

	compileOnly("org.lwjgl:lwjgl-nanovg:3.3.2")

	compileOnly("org.slf4j:slf4j-api:2.0.16")
}

// Configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			artifactId = archivesBaseName
			from components.java
		}
	}

	repositories {
		maven {
			name = "owlMaven"
			def repository = project.version.toString().contains("beta") || project.version.toString().contains("alpha") ? "snapshots" : "releases"
			url = "https://moehreag.duckdns.org/maven/" + repository
			credentials(PasswordCredentials)
			authentication {
				basic(BasicAuthentication)
			}
		}
	}
}
